--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -3,29 +3,48 @@
     %nav#header.navbar.navbar-default
       .container-fluid
         .navbar-header
+          %button.navbar-toggle.collapsed{ type: "button", data: { toggle: "collapse", target: "#navbar" }  }
+            %span.icon-bar
+            %span.icon-bar
+            %span.icon-bar
+
           - if current_user
             = link_to t(:flashcards_label), trainer_path, class: "navbar-brand"
           - else
             = link_to t(:flashcards_label), root_path, class: "navbar-brand"
-        #bs-example-navbar-collapse-1.collapse.navbar-collapse
+
+        %nav.collapse.navbar-collapse#navbar
           - if current_user
-            %ul.nav.navbar-nav.navbar-left
+            %ul.nav.navbar-nav
               %li= link_to t(:all_decks_label), blocks_path
               %li= link_to t(:add_deck_label), new_block_path
               %li= link_to t(:all_cards_label), cards_path
               %li= link_to t(:add_card_label), new_card_path
-          %p.navbar-text.navbar-right
-            - if current_user
-              = link_to t(:user_profile_label), edit_profile_path(current_user)
-              |
-              = link_to t(:delete_user_label), user_path(current_user), method: :delete, class: 'navbar-link', data: { confirm: 'Удалить пользователя?' }
-              |
-              = link_to t(:log_out_label), :logout, method: :post, class: 'navbar-link'
-            - else
-              = link_to t(:sing_up_label), new_user_path, class: 'navbar-link'
-              |
-              = link_to t(:log_in_with_github_label), auth_at_provider_path(provider: :github), class: 'navbar-link'
-              |
-              = link_to t(:log_in_label), :login, class: 'navbar-link' |
-              - I18n.available_locales.each do |locale|
-                = link_to locale, root_path(user_locale: locale), class: 'navbar-link'
+
+          %ul.nav.navbar-nav.navbar-right
+            %li.dropdown
+              %a#dropdownMenu.dropdown-toggle{"aria-expanded" => "true", "aria-haspopup" => "true", "data-toggle" => "dropdown", :type => "button"}
+                %span.glyphicon.glyphicon-user
+                %span.caret
+              %ul.dropdown-menu{"aria-labelledby" => "dropdownMenu"}
+                - if current_user
+                  - if current_user.is_admin?
+                    %li
+                      = link_to t(:admin_label), admin_path, class: 'navbar-link'
+                  %li
+                    = link_to t(:user_profile_label), edit_profile_path(current_user)
+                  %li
+                    = link_to t(:delete_user_label), user_path(current_user), method: :delete, class: 'navbar-link', data: { confirm: 'Удалить пользователя?' }
+                  %li
+                    = link_to t(:log_out_label), :logout, method: :post, class: 'navbar-link'
+                - else
+                  %li
+                    = link_to t(:sing_up_label), new_user_path, class: 'navbar-link'
+                  %li
+                    = link_to t(:log_in_with_github_label), auth_at_provider_path(provider: :github), class: 'navbar-link'
+                  %li
+                    = link_to t(:log_in_label), :login, class: 'navbar-link' |
+
+                  - I18n.available_locales.each do |locale|
+                    %li
+                      = link_to locale, root_path(user_locale: locale), class: 'navbar-link'
